tests/baselines/reference/contextuallyTypedElementsOfGenericZippingTuples.errors.txt
contextuallyTypedElementsOfGenericZippingTuples.ts(30,15): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.
contextuallyTypedElementsOfGenericZippingTuples.ts(36,15): error TS2322: Type 'string | number' is not assignable to type 'number'.
  Type 'string' is not assignable to type 'number'.


==== contextuallyTypedElementsOfGenericZippingTuples.ts (2 errors) ====
    declare function test<T extends unknown[], T2 extends unknown[]>(
      a: [
        ...{
          [K in keyof T]: {
            produce: (seed: string) => T[K];
          };
        }
      ],
      b: [
        ...{
          [K in keyof T2]: {
            consume: (arg: T[K & keyof T]) => T2[K];
          };
        }
      ]
    ): void;
    
    test(
      [
        {
          produce: () => "",
        },
        {
          produce: () => 42,
        },
      ],
      [
        {
          consume: (arg) => {
            const received: string = arg;
                  ~~~~~~~~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
            return received;
          },
        },
        {
          consume: (arg) => {
            const received: number = arg;
                  ~~~~~~~~
!!! error TS2322: Type 'string | number' is not assignable to type 'number'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
            return received;
          },
        },
      ]
    );
    